[package]
name = "limo-hotcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.24.2", features = ["full"] }
hex-literal = "0.3.4"
hex = "0.4.3"
cid = "0.8.6"
serde = "1.0.147"
serde_json = "1.0"
eyre = "0.6.8"
fred = {version = "5.2.0", features = ["serde-json"]}
rand = "0.8.5"
stable-eyre = "0.2"
